[workspace]
members = [
    "exonum",
    "exonum-storage-derive",
    "testkit",
    "testkit/server",
    "services/configuration",
    "services/time",
    "examples/cryptocurrency",
    "examples/cryptocurrency-advanced/backend",
    "examples/timestamping/backend",
]
exclude = [ "3rdparty", "exonum/fuzz" ]
